// protoc --go_out=rbac-manager/pkg/proto --go-grpc_out=rbac-manager/pkg/proto rbac-manager/pkg/proto/rbac.proto
syntax = "proto3";

package proto;

option go_package = "./";

service UserService {
  rpc ListProjectUsers (ListProjectUsersRequest) returns (ListProjectUsersReply) {}
  rpc DeleteUser (DeleteUserRequest) returns (Success) {}
  rpc PutUser (PutUserRequest) returns (Success) {}
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply) {}
  rpc PutUserInfo (PutUserRequest) returns (Success) {}
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password_hash = 4;
  int32 project_id = 5;
}

message ProjectUser {
  int32 user_id = 1;
  string user_name = 2;
}

message Success {
  bool succeed = 1;
}

message ListProjectUsersRequest {
    int32 project_id = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message PutUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int32 project_id = 5;
}

message GetUserInfoRequest {
  int32 id = 1;
}

message GetUserInfoReply {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated string project_name = 5;
  repeated string role_name = 6;
}

message ListProjectUsersReply {
  ProjectUser user_id = 1;
  ProjectUser user_name = 2;
}