// protoc --go_out=trace-manager/pkg/proto --go-grpc_out=trace-manager/pkg/proto trace-manager/pkg/proto/trace.proto
syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "./";

service TraceService {
  rpc PostSpan (PostSpanRequest) returns (google.protobuf.Empty) {}
  rpc PutSpan (PutSpanRequest) returns (google.protobuf.Empty) {}
  rpc GetTraces (google.protobuf.Empty) returns (GetTracesReply) {}
}

message Span {
  string trace_id = 1;
  string span_id = 2;
  string elapsed_time = 3;
  string status = 5;
  string message = 6;
}

message PostSpanRequest {
  Span span = 1;
}

message PutSpanRequest {
  Span span = 1;
}

message GetTracesReply {
  repeated Span spans = 1;
}